# red2016

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sysProps.xml
lib/ED/: CMakeLists.txt  PIDManager.cpp  PIDManager.hpp
lib/NAVX/: CMakeLists.txt
src/: Autonomous.cpp  Autonomous.hpp  Coordination.cpp  Coordination.hpp  Robot.cpp  Robot.hpp  Utils.cpp  Utils.hpp
src/ED/: PIDManager.cpp  PIDManager.hpp  Utils.cpp  Utils.hpp
src/NAVX/: AHRS.cpp  AHRS.h  AHRSProtocol.h  ContinuousAngleTracker.cpp  ContinuousAngleTracker.h  IIOCompleteNotification.h  IMURegisters.h  ITimestampedDataSubscriber.h  InertialDataIntegrator.cpp  OffsetTracker.cpp  Quaternion.cpp  RegisterIO.cpp  RegisterIO.h  RegisterIOI2C.cpp  RegisterIOI2C.h  RegisterIOSPI.cpp  RegisterIOSPI.h  SerialIO.cpp  SerialIO.h  TimestampedQuaternion.cpp  TimestampedQuaternion.h  TimestampedQuaternionHistory.cpp  TimestampedQuaternionHistory.h
src/PID/: IntakeAngle.cpp  IntakeAngle.hpp  ShooterPitch.cpp  ShooterPitch.hpp  ShooterWheels.cpp  ShooterWheels.hpp
src/Ports/: Analog.cpp  Analog.hpp  CAN.cpp  CAN.hpp  Digital.cpp  Digital.h  Digital.hpp  I2C.cpp  I2C.h  I2C.hpp  Motor.cpp  Motor.h  Motor.hpp  OI.cpp  OI.hpp
src/Subsystems/: Cameras.cpp  Cameras.hpp  ClimberArm.cpp  ClimberArm.h  ClimberArm.hpp  HolderWheels.cpp  HolderWheels.h  HolderWheels.hpp  IntakeAngle.cpp  IntakeAngle.h  IntakeAngle.hpp  IntakeRoller.cpp  IntakeRoller.h  IntakeRoller.hpp  Mobility.cpp  Mobility.hpp  OI.cpp  OI.hpp  Sensors.cpp  Sensors.h  Sensors.hpp  ShooterPitch.cpp  ShooterPitch.h  ShooterPitch.hpp  Winches.h  (+5 more)
